# ManVSZombies

./: .gitignore  CMakeLists.txt  README.md  redme2.md
include/: bullet.hpp  bullets.hpp  enemies.hpp  enemy.hpp  entity.hpp  game.hpp  library.hpp  player.hpp
source/: main.cpp
source/core/: game.cpp
source/entities/include/: bullet.hpp  bullets.hpp  enemies.hpp  enemy.hpp  entity.hpp  player.hpp
source/entities/src/: bullet.cpp  bullets.cpp  enemies.cpp  enemy.cpp  player.cpp
source/managers/include/: bullets_manager.hpp
source/managers/src/: bullets_manager.cpp
source/utilities/: organisation.txt
src/: bullet.cpp  bullets.cpp  enemies.cpp  enemy.cpp  entity.cpp  game.cpp  library.cpp  main.cpp  player.cpp
src/application/: utils.cpp  utils.hpp
src/base/: text.txt  utils.cpp  utils.hpp
src/core/: game.cpp  game.hpp
src/engine/: CollisionManager.cpp  CollisionManager.hpp
src/entities/include/: bullet.hpp  entity.hpp  moving_entity.hpp  player.hpp  static_entity.hpp  wall.hpp  zombie.hpp
src/entities/src/: bullet.cpp  enemy.cpp  entity.cpp  moving_entity  moving_entity.cpp  player.cpp  static_entity.cpp  wall.cpp  zombie.cpp
src/game/core/: Game.cpp  Game.hpp  Grid.cpp  Grid.hpp
src/game/entities/: Bullet.cpp  Bullet.hpp  Entity.cpp  Entity.hpp  MovingEntity.cpp  MovingEntity.hpp  Player.cpp  Player.hpp  Wall.cpp  Wall.hpp  Zombie.cpp  Zombie.hpp
src/game/managers/: BulletManager.cpp  BulletManager.hpp  CollisionManager.cpp  WallManager.cpp  WallManager.hpp  ZombieManager.cpp  ZombieManager.hpp
src/game/rendering/: Camera.cpp  Camera.hpp  GameCamera.cpp  Gamecamera.hpp  Renderer.cpp  Renderer.hpp
src/managers/include/: bullet_manager.hpp  bullets_manager.hpp  collision_manager.hpp  grid_manager.hpp  input_manager.hpp  wall_manager.hpp  zombie_manager.hpp
src/managers/src/: bullet_manager.cpp  bullets_manager.cpp  collision_manager.cpp  grid_manager.cpp  input_manager.cpp  wall_manager.cpp  zombie_manager.cpp
src/rendering/include/: game_camera.hpp  renderer.hpp
src/rendering/src/: game_camera.cpp  renderer.cpp
src/utilities/: library.cpp  library.hpp
